# Number_detection_model

./: .dockerignore  Dockerfile  aws-server-digit-recogniser.pem  aws-server.pem  main.py  pyproject.toml  requirements.txt  setup.py  template.py
artifacts/: number_recogniser.joblib
model_training/: model.py
src/: test.ipynb
src/Number_recognition_model/: logger.py
templates/: home.html
