[project]
name = "numbers-recognition"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "joblib>=1.5.3",
    "matplotlib>=3.11.0",
    "pillow>=12.3.0",
    "setuptools>=83.0.0",
    "tensorflow>=2.21.0",
    "uvicorn>=0.51.0",
]
